--- a/(public)/index.html
+++ b/(public)/index.html
@@ -24,9 +24,9 @@
         <h3 style="font-size: 200%" id="number1"> DEX Number
             <p id="pokedexNumber"></p>
         </h3>
-        <img id="imageOne" src="">
+        <img id="imageOne" src="" alt="">
         <br>
-        <img id="imageTwo" src="">
+        <img id="imageTwo" src="" alt="">
         <img id="imageThree" src="http://pixelartmaker.com/art/0bf759ddc6e7fc9.png">
         <img id="imageFour" src="http://pixelartmaker.com/art/0bf759ddc6e7fc9.png">
 
